@@ -1,0 +1,3 @@
+MD5 ce838678b2ab42b31d7bfef1935a6737 gnuconfig-20070118.tar.bz2 40472
+RMD160 b9782df91aaa45103feed9aa485338d4e0f216f5 gnuconfig-20070118.tar.bz2 40472
+SHA256 f74cfe69218d6e1d27855e24dccc3ae69dbf724424a2b711f170302894ddc9de gnuconfig-20070118.tar.bz2 40472
