@@ -1,0 +1,32 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gnuconfig/gnuconfig-20070118.ebuild,v 1.1 2007/02/08 03:51:09 vapier Exp $
+
+EAPI="prefix"
+
+inherit eutils
+
+DESCRIPTION="Updated config.sub and config.guess file from GNU"
+HOMEPAGE="http://savannah.gnu.org/projects/config"
+SRC_URI="mirror://gentoo/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc-macos ~sparc-solaris ~x86 ~x86-macos ~x86-solaris"
+IUSE=""
+
+S=${WORKDIR}
+
+src_unpack() {
+	unpack ${A}
+	epatch "${WORKDIR}"/*.patch
+}
+
+src_compile() { :;}
+
+src_install() {
+	insinto /usr/share/${PN}
+	doins config.{sub,guess} || die
+	fperms +x /usr/share/${PN}/config.{sub,guess}
+	dodoc ChangeLog
+}
