@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/gnuconfig
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gnuconfig/ChangeLog,v 1.27 2006/10/17 09:26:10 uberlord Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gnuconfig/ChangeLog,v 1.28 2007/02/08 03:51:09 vapier Exp $
+
+*gnuconfig-20070118 (08 Feb 2007)
+
+  08 Feb 2007; Mike Frysinger <vapier@gentoo.org>
+  +gnuconfig-20070118.ebuild:
+  Version bump.
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org> gnuconfig-20060702.ebuild:
   Added ~sparc-fbsd keyword.
